<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alert_dialog1"
    android:paddingHorizontal="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_alert_dialog1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_ad_alumni"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_reg_16"
            android:cursorVisible="true"
            android:singleLine="true"
            android:maxLines="1"
            tools:text="@tools:sample/lorem/random"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_save"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_save"
            android:text="@string/save"
            android:layout_gravity="right"
            android:layout_marginTop="105dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cancel"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_bt_cancel"
            android:text="@string/batal"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginTop="105dp"
            android:layout_marginRight="110dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>