<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376">

        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="@string/job_position" />

        <EditText
            android:id="@+id/input_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_reg_16"
            tools:text="@tools:sample/lorem/random"
            android:singleLine="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginHorizontal="20dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:text="@string/name_company" />

        <EditText
            android:id="@+id/input_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_reg_16"
            tools:text="@tools:sample/lorem/random"
            android:singleLine="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="140dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_save"
            android:text="@string/save"
            android:layout_gravity="end"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bt_cancel"
            android:text="Batal"
            android:layout_gravity="right"
            android:layout_marginTop="200dp"
            android:layout_marginRight="110dp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>