<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/data_diri"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>


    <TextView
        android:id="@+id/tv1"
        style="@style/text_reg_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nama"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/name"
        style="@style/text_reg_16"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_search_bar"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingHorizontal="15dp"
        android:textColor="@color/blue"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tv2"
        style="@style/text_reg_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nim"
        app:layout_constraintBottom_toBottomOf="@+id/student_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/student_id"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/student_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:textColor="@color/blue"
        tools:text="@tools:sample/lorem"
        android:maxLines="1"
        style="@style/text_reg_16"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_search_bar"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/tv3"
        style="@style/text_reg_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/program_studi"
        app:layout_constraintBottom_toBottomOf="@+id/major"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/major"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/major"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:textColor="@color/blue"
        style="@style/text_reg_16"
        tools:text="@tools:sample/lorem"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_search_bar"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toBottomOf="@+id/student_id" />

    <TextView
        android:id="@+id/tv4"
        style="@style/text_reg_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/ipk"
        app:layout_constraintBottom_toBottomOf="@+id/gpa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gpa"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/gpa"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:textColor="@color/blue"
        style="@style/text_reg_16"
        tools:text="@tools:sample/lorem"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_search_bar"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/major" />

    <TextView
        android:id="@+id/tv5"
        style="@style/text_reg_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tahun_masuk"
        app:layout_constraintBottom_toBottomOf="@+id/year_of_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/year_of_entry"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/year_of_entry"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:textColor="@color/blue"
        style="@style/text_reg_16"
        tools:text="2018"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_search_bar"
        app:layout_constraintStart_toEndOf="@+id/tv5"
        app:layout_constraintTop_toBottomOf="@+id/gpa" />

    <TextView
        android:id="@+id/tv6"
        style="@style/text_reg_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tahun_lulus"
        app:layout_constraintBottom_toBottomOf="@+id/graduation_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/graduation_year"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/graduation_year"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:textColor="@color/blue"
        style="@style/text_reg_16"
        tools:text="2022"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_search_bar"
        app:layout_constraintStart_toEndOf="@+id/tv6"
        app:layout_constraintTop_toBottomOf="@+id/year_of_entry" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/pekerjaan"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/graduation_year"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status pekerjaan"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        style="@style/text_reg_16"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/tv7"/>

    <RadioGroup
        android:id="@+id/rb"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_bekerja"
            style="@style/text_reg_16"
            android:textColor="@color/blue"
            android:textIsSelectable="true"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_bekerja"
            style="@style/text_reg_16"
            android:textIsSelectable="true"
            android:textColor="@color/blue"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toEndOf="@+id/rb"
            tools:ignore="MissingConstraints,RtlHardcoded" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_job_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/rb">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="Nama perusahaan"
            android:textColorHint="@color/dark_grey"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company"
                android:textColor="@color/blue"
                style="@style/text_reg_16"
                android:singleLine="true"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Alamat perusahaan"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/blue"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/til_company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_address"
                android:textColor="@color/blue"
                style="@style/text_reg_16"
                android:singleLine="true"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Posisi jabatan"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/blue"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/til_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:textColor="@color/blue"
                style="@style/text_reg_16"
                android:singleLine="true"
                android:paddingTop="12dp"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_year_work"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Tanggal mulai bekerja"
            app:boxBackgroundColor="@color/white"
            android:gravity="bottom"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/blue"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/til_position"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_work"
                android:layout_width="match_parent"
                android:textColor="@color/blue"
                style="@style/text_reg_16"
                android:singleLine="true"
                android:paddingTop="12dp"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gaji perbulan"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/blue"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/til_year_work"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/salary"
                android:layout_width="match_parent"
                android:textColor="@color/blue"
                style="@style/text_reg_16"
                android:singleLine="true"
                android:paddingTop="12dp"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        style="@style/text_reg_16"
        app:layout_constraintTop_toBottomOf="@id/view_job_information"/>

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:maxLength="200"
        android:maxLines="5"
        android:gravity="top"
        style="@style/text_reg_16"
        android:textColor="@color/blue"
        android:padding="10dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv8"
        tools:text="@tools:sample/lorem"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bg_search_bar"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_save"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/kirim"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>